modified:   Images/Jake Vector 1.png 	modified:   index.html 	new file:   js/index.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <header>
   <link rel="stylesheet" href="style.css">
+  <script src="/js/index.js"></script>
 </header>
   <body>
     <div class="desktop-home-page">
@@ -10,8 +11,8 @@
       <div class="overlap-wrapper">
         <div class="overlap">
           <div class="background">
-            <div class="home-button"><div class="home-button-2"><img class="img" src="logo.png" /></div></div>
       <div class="nav-bar">
+        <div class="home-button"><div class="home-button-2"><img class="logo" src="/Images/Logo.png" /></div></div>
         <div class="frame-3">
                 <div class="about-symbol"><div class="nav-bar-text">About</div></div>
                 <div class="explore-button"><div class="nav-bar-text">Projects</div></div>
@@ -19,17 +20,19 @@
         </div>
       </div>
       <div class="frame-4">
-      <div class="background-word">Jake</div>  
-      <img src="jake vector 1.png">
-      <img src="about-q-mark.png">
+      <div class="background-word">Jake</div>
+      <div class="jake">  
+      <img src="/Images/Jake Vector 1.png">
+      <div class="q-mark"><a href="#about-me-container"><img src="/Images/About-Q-Mark.png"></a></div>
+    </div>
     </div>
           </div>
         <div class="overlap-2">
           <div class="foreground">
             <div class="frame">
-              <div class="about-me-container">
+              <div id="about-me-container">
                 <div class="about-me">
-                  <img class="ellipse" src="ellipse 1.png" alt="circle" />
+                  <img class="ellipse" src="/Images/Ellipse 1.png" alt="circle" />
                   <div class="about-me-blurb">
                     <div class="basic-header">About Me</div>
                     <p class="body-Text">
@@ -59,10 +62,10 @@
                   <div class="explore-card">
                     <div class="overlap-group-2">
                       <div class="header">Coffee First</div>
-                      <img class="emoji" src="emoji.png">
+                      <img class="emoji" src="/Images/Emoji.png">
                     </div>
                   </div>
-                  <div class="explore-card"><img class="urclogo-NO" src="URClogo-NO-whitespace 2.png" /></div>
+                  <div class="explore-card"><img class="urclogo-NO" src="/Images/URClogo-NO-whitespace 2.png" /></div>
                   <div class="explore-card">
                     <div class="text-wrapper-3">More<br />Projects...</div>
                   </div>
@@ -79,7 +82,9 @@
                   <div class="text-wrapper-4">PO Box TBD</div>
                 </div>
                 <div class="text-wrapper-4">© Copyright 2024</div>
-                <img class="instagram-link" src="instagram-link.png" />
+                <div class="inst-link-shrink">
+                <img class="instagram-link" src="/Images/instagram-link.png">
+                </div>
               </footer>
             </div>
           </div>
