modified:   index.html 	modified:   js/index.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="background-word">Jake</div>
       <div class="jake">  
       <img src="/Images/Jake Vector 1.png">
-      <div class="q-mark"><a href="#about-me-container"><img src="/Images/About-Q-Mark.png"></a></div>
+      <div id="q-mark"><a href="#about-me-container"><img src="/Images/About-Q-Mark.png"></a></div>
     </div>
     </div>
           </div>
