--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="frame-4">
       <div class="background-word">Jake</div>
       <div class="jake">  
-      <img src="/Images/Jake Vector 1.png">
+      <img ready="fade" id="img1" src="/Images/Jake Vector 1.png">
       <div id="q-mark"><a href="#about-me-container"><img src="/Images/About-Q-Mark.png"></a></div>
     </div>
     </div>
