modified:   index.html 	modified:   js/index.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <header>
   <link rel="stylesheet" href="style.css">
-  <script src="/js/index.js"></script>
 </header>
   <body>
     <div class="desktop-home-page">
@@ -22,8 +21,8 @@
       <div class="frame-4">
       <div class="background-word">Jake</div>
       <div class="jake">  
-      <img ready="fade" id="img1" src="/Images/Jake Vector 1.png">
-      <div id="q-mark"><a href="#about-me-container"><img src="/Images/About-Q-Mark.png"></a></div>
+      <img id="img1" src="/Images/Jake Vector 1.png">
+      <div><img id="q-mark" src="/Images/About-Q-Mark.png"></div>
     </div>
     </div>
           </div>
@@ -93,5 +92,6 @@
       </div>
       </div>
     </div>
+    <script src="/js/index.js"></script>
   </body>
 </html>
