modified:   index.html 	modified:   js/index.js

--- a/index.html
+++ b/index.html
@@ -77,12 +77,16 @@
               <footer class="footer">
                 <div class="frame-2">
                   <p class="p">Reach out to me here:</p>
-                  <div class="text-wrapper-4">Jacob.Malachowski@gmail.com</div>
+                  <div><a class="text-wrapper-4" href= "mailto:Jacob.Malachowski@gmail.com"
+                    id="email" >Jacob.Malachowski@gmail.com</a></div>
                   <div class="text-wrapper-4">PO Box TBD</div>
                 </div>
                 <div class="text-wrapper-4">© Copyright 2024</div>
                 <div class="inst-link-shrink">
-                <img class="instagram-link" src="/Images/instagram-link.png">
+                <a href="https://www.instagram.com/bronze.demon/" 
+                target="_blank" 
+                rel="noopener noreferrer"
+                ><img class="instagram-link" src="/Images/instagram-link.png"></a>
                 </div>
               </footer>
             </div>
