modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       <div class="frame-4">
       <div class="background-word">Jake</div>
       <div class="jake">  
-      <img id="img1" src="/Images/Jake Vector 1.png">
+      <img id="jake" src="/Images/Jake Vector 1.png">
       <div><img id="q-mark" src="/Images/About-Q-Mark.png"></div>
+      </div>
     </div>
     </div>
           </div>
@@ -56,6 +57,7 @@
               <div class="projects-section">
                 <div class="basic-header">Projects:</div>
                 <br>
+                <!--Explore Carousel-->
                 <div class="explore-carousel-container">
                 <div class="explore-carousel">
                   <div class="explore-card">
@@ -74,11 +76,12 @@
                   </div>
                   </div>
               </div>
+              <!--footer-->
               <footer class="footer">
                 <div class="frame-2">
                   <p class="p">Reach out to me here:</p>
                   <div><a class="text-wrapper-4" href= "mailto:Jacob.Malachowski@gmail.com"
-                    id="email" >Jacob.Malachowski@gmail.com</a></div>
+                    id="email" ><u>Jacob.Malachowski@gmail.com</u></a></div>
                   <div class="text-wrapper-4">PO Box TBD</div>
                 </div>
                 <div class="text-wrapper-4">© Copyright 2024</div>
