new file:   PersonalPortfolio 	new file:   fonts/Inter.ttc 	new file:   fonts/Lora-Bold.ttf 	new file:   fonts/Lora-BoldItalic.ttf 	new file:   fonts/Lora-Italic.ttf 	new file:   fonts/Lora-Medium.ttf 	new file:   fonts/Lora-MediumItalic.ttf 	new file:   fonts/Lora-Regular.ttf 	new file:   fonts/Lora-SemiBold.ttf 	new file:   fonts/Lora-SemiBoldItalic.ttf 	new file:   fonts/outward-block-webfont.woff 	new file:   fonts/outward-block-webfont.woff2 	new file:   fonts/outward-block.ttf 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <header>
+  <style>
+  @import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap');
+  
+  </style>
   <link rel="stylesheet" href="style.css">
 </header>
   <body>
@@ -43,17 +47,18 @@
                       He maintains open availability with his schedule and is known for his patience, adept multitasking
                       skills, and adaptability to any work environment. Thriving under pressure, he brings thorough
                       attention to detail to all tasks, ensuring precision in every aspect of his work.
+                    
                     </p>
+                    <div class="button">
+                      <a href="https://docs.google.com/document/d/19wgmdd0xQG6Popm7R-iCvJgfYSIrEQ_b/edit?usp=sharing&ouid=106560767687502447769&rtpof=true&sd=true"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                         ><div class="button-text">Resume</div>
+                      </a>
+                    </div>
                   </div>
                 </div>
-              </div>            
-              <div class="button">
-              <a href="https://docs.google.com/document/d/19wgmdd0xQG6Popm7R-iCvJgfYSIrEQ_b/edit?usp=sharing&ouid=106560767687502447769&rtpof=true&sd=true"
-              target="_blank"
-              rel="noopener noreferrer"
-                 ><div class="button-text">Resume</div>
-              </a>
-            </div>
+              </div>
               <div class="projects-section">
                 <div class="basic-header">Projects:</div>
                 <br>
@@ -62,16 +67,16 @@
                 <div class="explore-carousel">
                   <div class="explore-card">
                     <div class="overlap-group-2">
-                      <div class="header">Coffee First</div>
                       <img class="emoji" src="/Images/Emoji.png">
+                      <div class="header">Coffee First</div>
                     </div>
                   </div>
                   <div class="explore-card"><img class="urclogo-NO" src="/Images/URClogo-NO-whitespace 2.png" /></div>
                   <div class="explore-card">
-                    <div class="text-wrapper-3">More<br />Projects...</div>
+                    <div class="expore-card-text">More<br />Projects...</div>
                   </div>
                   <div class="explore-card">
-                    <div class="text-wrapper-3">Coming Soon...</div>
+                    <div class="explore-card-text">Coming Soon...</div>
                   </div>
                   </div>
                   </div>
@@ -84,7 +89,7 @@
                     id="email" ><u>Jacob.Malachowski@gmail.com</u></a></div>
                   <div class="text-wrapper-4">PO Box TBD</div>
                 </div>
-                <div class="text-wrapper-4">© Copyright 2024</div>
+                <div id="copyright" class="text-wrapper-4">© Copyright 2024</div>
                 <div class="inst-link-shrink">
                 <a href="https://www.instagram.com/bronze.demon/" 
                 target="_blank" 
