modified:   Images/Logo.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -14,14 +14,17 @@
       <div class="overlap-wrapper">
         <div class="overlap">
           <div class="background">
-      <div class="nav-bar">
-        <div class="home-button"><div class="home-button-2"><img class="logo" src="/Images/Logo.png" /></div></div>
-        <div class="frame-3">
-                <div class="about-symbol"><div class="nav-bar-text">About</div></div>
-                <div class="explore-button"><div class="nav-bar-text">Projects</div></div>
-                <div class="about-symbol"><div class="nav-bar-text">Coming Soon</div></div>
-        </div>
-      </div>
+            <div class = "navBar">
+              <div class="home-button"><div class="home-button-2"><img class="logo" src="/Images/Logo.png" /></div></div>
+              <div class="navigation">
+                <div class="frame-3">
+                        <div class="about-symbol"><div class="nav-bar-text">About</div></div>
+                        <div class="explore-button"><div class="nav-bar-text">Projects</div></div>
+                        <div class="about-symbol"><div class="nav-bar-text">Coming Soon</div></div>
+                </div>
+              </div>
+            </div>
+
       <div class="frame-4">
       <div class="background-word">Jake</div>
       <div class="jake">  
